<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ToggleButton
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textOff="@string/character_button_off"
            android:textOn="@string/character_button_on"
            android:id="@+id/characterToggle" />

        <ToggleButton
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textOff="@string/case_button_off"
            android:textOn="@string/case_button_on"
            android:id="@+id/caseToggle" />

        <ToggleButton
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:onClick="toggleMode"
            android:textOff="@string/mode_encrypt"
            android:textOn="@string/mode_decrypt"
            android:id="@+id/railModeToggle" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/textbox_padding"
        android:layout_marginBottom="@dimen/textbox_padding"
        android:paddingTop="@dimen/textbox_padding"
        android:paddingBottom="@dimen/textbox_padding"
        android:layout_weight="1"
        android:id="@+id/railPlainText"
        android:imeOptions="actionDone"
        android:hint="@string/plaintext_enter_hint"
        android:gravity="start"
        android:background="#E0E0E0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:id="@+id/railNum"
            android:hint="@string/rail_num_hint"
            android:layout_weight="1" />

        <Button
            android:layout_width="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/railGo"
            android:text="Encrypt"
            android:onClick="computeRailFence"
            android:layout_weight="1"/>

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:layout_marginTop="@dimen/textbox_padding"
        android:layout_marginBottom="@dimen/textbox_padding"
        android:paddingTop="@dimen/textbox_padding"
        android:paddingBottom="@dimen/textbox_padding"
        android:background="#E0E0E0">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:selectAllOnFocus="true"
            android:textIsSelectable="true"
            android:typeface="monospace"
            android:text="@string/diagram_example"
            android:id="@+id/railDiagram"/>
    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/textbox_padding"
        android:layout_marginBottom="@dimen/textbox_padding"
        android:paddingTop="@dimen/textbox_padding"
        android:paddingBottom="@dimen/textbox_padding"
        android:selectAllOnFocus="true"
        android:textIsSelectable="true"
        android:layout_weight="1"
        android:background="#E0E0E0"
        android:text="@string/ciphertext_display_hint"
        android:id="@+id/railCipherText"
        android:textAppearance="?android:attr/textAppearanceMedium" />


</LinearLayout>
